# Hw_11_nlp

./: README.md  main.py  pyproject.toml  source.txt  spacy_load.py  summary_nltk.txt  summary_spacy.txt  text_width_norm_script.py
scripts/: post_install.py
