[tool.poetry]
name = "hw-12-nlp"
version = "0.1.0"
description = ""
authors = ["Vladislav B <rolmf85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
spacy = "^3.7.5"
nltk = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
